2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (debug): New variable.
	(tmp): s/ac/ar/.
	<options handling>: Support --debug.
	* doc/autoconf.texi: Adjust.

2000-07-10  Akim Demaille  <akim@epita.fr>

	Fix the bugs recently introduced in autoreconf.

	* autoreconf.sh: Don't run automake when the package is not using
	it.
	When checking whether autoheader should be rerun, don't ask
	config.h to be newer than stamp-h and vice-versa.
	Remove an unbalanced `fi'.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (run_aclocal): Rename as `uses_aclocal' to avoid
	the convention clash with autoconf.sh where `run_foo' is the
	command to run `foo'.
	(uses_autoheader): New variable.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (update.sh): New sub program.
	Use it in the whole process.
	(acconfig_h): New variable.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh <run_aclocal>: Use false/: instead of no/yes.
	Formatting and factoring changes.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: You too can have a $tmp dir if you wish.
	(alflags.sed): New sub sed program.
	Compute the flags of aclocal from Makefile.am instead of
	Makefile.in, it is unlikely that aclocal be used but not automake,
	while it is convenient to be able to run autoreconf even if
	automake was not run yet.
	Use `autoconf --trace' to get the list of configuration headers.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_PLAIN_SCRIPT): New macro.
	* tests/base.m4 (m4_wrap, AC_REQUIRE, AC_SHELL_MKDIR_P): Use it.
	* autoconf.sh: Properly handle the case where `$output' is `-'
	(i.e., stdout).
	Handle `-ofile', not only `-o file'.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Formatting changes.
	When verbose, display exactly what you do, not just a synopsis.
	When using `$verbose' don't use quotes to avoid spurious spaces
	for empty arguments.

2000-07-10  Akim Demaille  <akim@epita.fr>
